feat: release CleanPulse v2.0.0 Ultimate Edition with all 10 revolutionary anti-lag features